--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,6 @@
-<%= paginate(@tweets) %>
+<div class="contents row" >
+ <% @tweets.each do |tweet| %>
+  <%= render partial: "tweet", locals: { tweet: tweet } %>
+  <% end %>
+ <%= paginate(@tweets) %>
+</div>
